tests/sksl/errors/InterfaceBlockWithInvalidNestedStruct.glsl
### Compilation failed:

error: 2: unsized arrays are not permitted here
    int[] unsizedArray;
    ^^^^^^^^^^^^^^^^^^
error: 6: unsized arrays are not permitted here
    S s;
    ^^^
2 errors
